--- a/index.html
+++ b/index.html
@@ -159,46 +159,57 @@
                 <section class="section feature" id="feature" aria-label="feature">
                     <div class="container">
                         <figure class="feature-banner">
-                            <img src="./assets/images/feature-banner.png" width="582" height="585" loading="lazy" alt="feature banner" class="w-100">
+                            <img src="./assets/images/Tokenomics.png" width="582" height="585" loading="lazy" alt="feature banner" class="w-100">
                         </figure>
                         <div class="feature-content">
-                            <p class="section-subtitle has-before">Why Choose us</p>
                             <h2 class="h2 section-title">
-                                Our Tokenomics are <span class="has-before">clear!</span> </h2>
+                                Our tokenomics are <span class="has-before">Star-clear!</span> </h2>
                             <ul class="feature-list">
                                 <li>
                                     <div class="feature-card">
-                                        <div class="card-icon" style="--color: 174, 77%, 50%">
+                                        <div class="card-icon" style="--color: 321, 100%, 50%">
                                             <ion-icon name="rocket-sharp" aria-hidden="true"></ion-icon>
                                         </div>
-                                        <div>
-                                            <h3 class="h3 card-title">Fast working process</h3>
+                                        <div class="feature-title">
+                                            <h3 class="h3 card-title">Liquidity:</h3>
                                             <p class="card-text">
-                                                At Pixology we specialize in designing, building, shipping and scaling beautifu. </p>
+                                                Every transaction will help growing the LP.  </p>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="feature-card">
-                                        <div class="card-icon" style="--color: 241, 77%, 63%;">
-                                            <ion-icon name="people-sharp" aria-hidden="true"></ion-icon>
+                                        <div class="card-icon" style="--color: 45, 100%, 50%;">
+                                            <ion-icon name="cash-outline" aria-hidden="true"></ion-icon>
                                         </div>
-                                        <div>
-                                            <h3 class="h3 card-title">Didicated team</h3>
+                                        <div class="feature-title">
+                                            <h3 class="h3 card-title">Marketing:</h3>
                                             <p class="card-text">
-                                                At Pixology we specialize in designing, building, shipping and scaling beautifu. </p>
+                                                The marketing team will use 3% of every transaction to book calls, AMA and ads. </p>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="feature-card">
-                                        <div class="card-icon" style="--color: 343, 98%, 60%;">
-                                            <ion-icon name="headset-sharp" aria-hidden="true"></ion-icon>
+                                        <div class="card-icon" style="--color: 22, 100%, 50%;">
+                                            <ion-icon name="gift-outline" aria-hidden="true"></ion-icon>
                                         </div>
-                                        <div>
-                                            <h3 class="h3 card-title">24/7 hours support</h3>
+                                        <div class="feature-title">
+                                            <h3 class="h3 card-title">Rewards:</h3>
                                             <p class="card-text">
-                                                At Pixology we specialize in designing, building, shipping and scaling beautifu. </p>
+                                                Hold your $LUNE token in your wallet, get daily rewards! 2% x volume x % of supply holding!</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="feature-card">
+                                        <div class="card-icon" style="--color: 253, 100%, 50%;">
+                                            <ion-icon name="flame-outline" aria-hidden="true"></ion-icon>
+                                        </div>
+                                        <div class="feature-title">
+                                            <h3 class="h3 card-title">Burn:</h3>
+                                            <p class="card-text">
+                                                2% over every transaction will be removed of the circulation supply!</p>
                                         </div>
                                     </div>
                                 </li>
