--- a/_pgbackup/index_1684077677.html
+++ b/_pgbackup/index_1684077677.html
@@ -106,38 +106,50 @@
                         </div>
                     </div>
                 </div>
-                <!-- 
-- #SERVICE
--->
+                <!-- #SERVICE -->
                 <section class="section service" id="service" aria-label="service">
                     <div class="container">
                         <h2 class="h2 section-title text-center">Access all services and gain<span class="has-before">Financial Stability!</span></h2>
-                        <div class="service-card" style="--color: 174, 77%, 50%;">
+                        <!-- #SERVICE 1 -->
+                        <div class="service-card" style="--color: 51, 100%, 50%;">
                             <div class="service-card-container">
-                                <h3 class="h3 service-title">  <a href="#" class="card-title">ORE</a> FIND YOUR WAY IN SPACE! </h3>
-                                <h2 class="h3 service-description"> (A DAPP that shows you the balance of your wallet if you hold a certain amount of $LUNE)</h2>
+                                <h3 class="h3 service-title-1"> <a href="#" class="card-title">ORE</a> FIND YOUR WAY IN SPACE!🌌 </h3>
+                                <h3 class="h3 service-description-1"> (A DAPP that shows you the balance of your wallet if you hold a certain amount of $LUNE)</h3>
                             </div>
-                            <div style="flex-basis: 30%;align-self: stretch;">
-                                <img src="./assets/images/Zerion.png" style="" width="100vw" height="100vw">
+                            <div class="card-icon service-image-1">
+                                <img src="./assets/images/Zerion.png">
                             </div>
                         </div>
-                        <div class="service-card" style="--color: 267, 76%, 57%">
-                            <div class="card-icon">
-                                <img src="./assets/images/service-icon-2.png" width="30" height="30" loading="lazy" alt="service icon">
+                        <!-- #SERVICE 2 -->
+                        <div class="service-card" style="--color: 216, 92%, 73%;">
+                            <div class="service-card-container">
+                                <h3 class="h3 service-title-2"> <a href="#" class="card-title">ROCKET</a> REACH TO YOUR FINANCIAL INDEPENDANCE!🚀 </h3>
+                                <h3 class="h3 service-description-2"> Earn up to 1500% APY on your $ROCKETs and </h3>
+                                <h3 class="h3 service-description-22">Get daily compounded rewards in $LUNE or $XODEX! </h3>
                             </div>
-                            <h3 class="h3"> <a href="#" class="card-title">Web & Mobile Development</a> </h3>
+                            <div class="card-icon service-image-2">
+                                <img src="./assets/images/Virtuous.png">
+                            </div>
                         </div>
-                        <div class="service-card" style="--color: 17, 100%, 68%">
-                            <div class="card-icon">
-                                <img src="./assets/images/service-icon-3.png" width="30" height="30" loading="lazy" alt="service icon">
+                        <!-- #SERVICE 3 -->
+                        <div class="service-card" style="--color: 343.1, 100%, 50%;">
+                            <div class="service-card-container">
+                                <h3 class="h3 service-title-3"> <a href="#" class="card-title">LUNESWAP</a> SWAP, POOL, FARM & STAKE!💎 </h3>
+                                <h3 class="h3 service-description-3"> (A DAPP that shows you the balance of your wallet if you hold a certain amount of $LUNE)</h3>
                             </div>
-                            <h3 class="h3"> <a href="#" class="card-title">Fast Customer Support</a> </h3>
+                            <div class="card-icon service-image-3">
+                                <img src="./assets/images/Swap.png">
+                            </div>
                         </div>
-                        <div class="service-card" style="--color: 343, 98%, 60%">
-                            <div class="card-icon">
-                                <img src="./assets/images/service-icon-4.png" width="30" height="30" loading="lazy" alt="service icon">
+                        <!-- #SERVICE 4 -->
+                        <div class="service-card" style="--color: 145.4, 100%, 73%;">
+                            <div class="service-card-container">
+                                <h3 class="h3 service-title-4"> <a href="#" class="card-title">OPENLUNE</a> A MARKET ONLY FOR THE MOST ADVENTUROUS!💰 </h3>
+                                <h3 class="h3 service-description-4"> (NFT market + Lune Collection 3D coin + 2D NFT / Lottery)</h3>
                             </div>
-                            <h3 class="h3"> <a href="#" class="card-title">Human Resources</a> </h3>
+                            <div class="card-icon service-image-4">
+                                <img src="./assets/images/NFT.png">
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -152,7 +164,7 @@
                         <div class="feature-content">
                             <p class="section-subtitle has-before">Why Choose us</p>
                             <h2 class="h2 section-title">
-                                Specialist in aviding clients of financial <span class="has-before">challenges</span> </h2>
+                                Our Tokenomics are <span class="has-before">clear!</span> </h2>
                             <ul class="feature-list">
                                 <li>
                                     <div class="feature-card">
