--- a/_pgbackup/index_1684251101.html
+++ b/_pgbackup/index_1684251101.html
@@ -224,7 +224,7 @@
                     <div class="container">
                         <h2 class="h2 section-title text-center">
                             Our <span class="has-before">RoadMap!</span> </h2>
-                        <img class="roadmap" src="./assets/images/roadmap.png">
+                        <img src="./assets/images/roadmap.png" style="width:80vw; margin-left:auto; margin-right:auto; display:block;">
                     </div>
                 </section>
             </article>
