--- a/_pgbackup/index_1684253789.html
+++ b/_pgbackup/index_1684253789.html
@@ -224,7 +224,7 @@
                     <div class="container">
                         <h2 class="h2 section-title text-center">
                             Our <span class="has-before">RoadMap!</span> </h2>
-                        <img class="roadmap" src="./assets/images/Roadmap.png">
+                        <img class="roadmap" src="./assets/images/roadmap.png">
                     </div>
                 </section>
             </article>
