--- a/_pgbackup/index_1684254894.html
+++ b/_pgbackup/index_1684254894.html
@@ -56,6 +56,9 @@
                             <a href="#feature" class="navbar-link" data-nav-link>Tokenomics</a>
                         </li>
                         <li class="navbar-item">
+                            <a href="#project" class="navbar-link" data-nav-link>About us</a>
+                        </li>
+                        <li class="navbar-item">
                             <a href="#blog" class="navbar-link" data-nav-link>Roadmap</a>
                         </li>
                     </ul>
@@ -73,10 +76,10 @@
 - #HERO
 -->
                 <div id="home" class="nighty">
-                    <h1 class="title">LUNE</h1>
-                    <h1 class="on">On</h1>
-                    <img class="xodexx" src="./assets/images/Xodex.png"/>
-                    <h1 class="xodex">ODEX</h1>
+                    <h1 id="title">LUNE</h1>
+                    <h1 id="on">On</h1>
+                    <img id="xodexx" src="./assets/images/Xodex.png"/>
+                    <h1 id="xodex">ODEX</h1>
                     <script src="script.js"></script>
                     <img class="lune" src="./assets/images/Lune-1500.png"/>
                     <div class="rocketandfire">
