--- a/_pgbackup/index_1684547531.html
+++ b/_pgbackup/index_1684547531.html
@@ -131,8 +131,8 @@
                         <!-- #SERVICE 3 -->
                         <div class="service-card" style="--color: 343.1, 100%, 50%;">
                             <div class="service-card-container">
-                                <h3 class="h3 service-title-3"> <a href="#" class="card-title">LUNESWAP</a> SWAP, POOL, FARM &amp; STAKE!💎 </h3>
-                                <h3 class="h3 service-description-3">Hold $LUNE and get advantages! Start trading soon!</h3>
+                                <h3 class="h3 service-title-3"> <a href="#" class="card-title">LUNESWAP</a> SWAP, POOL, FARM & STAKE!💎 </h3>
+                                <h3 class="h3 service-description-3">Swap your tokens on our DEX and get adventages if you&apos;re holding $LUNE!</h3>
                             </div>
                             <div class="card-icon service-image-3">
                                 <img src="./assets/images/Swap.png">
