--- a/_pgbackup/index_1685799577.html
+++ b/_pgbackup/index_1685799577.html
@@ -110,7 +110,7 @@
                         <!-- #SERVICE 1 -->
                         <div class="service-card" style="--color: 51, 100%, 50%;">
                             <div class="service-card-container">
-                                <h3 class="h3 service-title-1"> <a href="#" class="card-title">ORRE</a> FIND YOUR WAY IN SPACE!🌌 </h3>
+                                <h3 class="h3 service-title-1"> <a href="#" class="card-title">ORE</a> FIND YOUR WAY IN SPACE!🌌 </h3>
                                 <h3 class="h3 service-description-1"> (A DAPP that shows you the balance of your wallet if you hold a certain amount of $LUNE)</h3>
                             </div>
                             <div class="card-icon service-image-1">
