Change to CREDIT

--- a/_pgbackup/index_1698244402.html
+++ b/_pgbackup/index_1698244402.html
@@ -75,8 +75,8 @@
                 <div id="home" class="nighty">
                     <h1 class="title">LUNE</h1>
                     <h1 class="on">On</h1>
-                    <img class="xodexx" src="assets/images/Logo.png"/>
-                    <h1 class="xodex">CREDITSC!</h1>
+                    <img class="xodexx" src="./assets/images/Xodex.png"/>
+                    <h1 class="xodex">ODEX</h1>
                     <script src="script.js"></script>
                     <img class="lune" src="./assets/images/Lune-1500.png"/>
                     <div class="rocketandfire">
@@ -122,7 +122,7 @@
                             <div class="service-card-container">
                                 <h3 class="h3 service-title-2"> <a href="#" class="card-title">ROCKET</a> REACH TO YOUR FINANCIAL INDEPENDANCE!🚀 </h3>
                                 <h3 class="h3 service-description-2">Earn up to 120% APY on your $ROCKETs and</h3>
-                                <h3 class="h3 service-description-22">Get daily compounded rewards in $LUNE or $CREDIT!</h3>
+                                <h3 class="h3 service-description-22">Get daily compounded rewards in $LUNE or $XODEX! </h3>
                             </div>
                             <div class="card-icon service-image-2">
                                 <img src="./assets/images/Virtuous.png">
@@ -220,7 +220,8 @@
                 <section class="section blog" id="blog" aria-label="blog">
                     <div class="container">
                         <h2 class="h2 section-title text-center">
-                            Our <span class="has-before">RoadMap! (Soon!)</span> </h2>
+                            Our <span class="has-before">RoadMap!</span> </h2>
+                        <img class="roadmap" src="./assets/images/Roadmap.png">
                     </div>
                 </section>
             </article>
