--- a/_pgbackup/index_1698246708.html
+++ b/_pgbackup/index_1698246708.html
@@ -220,7 +220,8 @@
                 <section class="section blog" id="blog" aria-label="blog">
                     <div class="container">
                         <h2 class="h2 section-title text-center">
-                            Our <span class="has-before">RoadMap! (Soon!)</span> </h2>
+                            Our <span class="has-before">RoadMap!</span> </h2>
+                        <img class="roadmap" src="./assets/images/Roadmap.png">
                     </div>
                 </section>
             </article>
